Header has fixed position on mobile

--- a/nhs/src/main/resources/static/css/components/common/header.css
+++ b/nhs/src/main/resources/static/css/components/common/header.css
@@ -62,4 +62,9 @@ header {
     .header-logo-desktop {
         display: none;
     }
+
+    header {
+        position: sticky;
+        top: 0;
+    }
 }
