--- a/nhs/src/main/resources/static/css/components/common/nav.css
+++ b/nhs/src/main/resources/static/css/components/common/nav.css
@@ -22,7 +22,7 @@
 .nav-list a {
     color: var(--nhs-white);
     text-decoration: none;
-    height: 100%;
+    height: 80%;
 }
 
 .nav-item {
@@ -66,11 +66,16 @@
         position: fixed;
         bottom: 0;
         height: 11vh;
+        margin-top: 11vh;
         justify-content: center;
     }
 
     .nav-list {
         justify-content: space-around;
         max-width: 400px;
+    }
+
+    footer {
+        height: 11vh;
     }
 }
