--- a/nhs/src/main/resources/static/css/diary/checkin.css
+++ b/nhs/src/main/resources/static/css/diary/checkin.css
@@ -1,7 +1,3 @@
-body {
-    background-color: var(--nhs-pale-grey);
-}
-
 * {
     margin: 0;
     padding: 0;
@@ -13,8 +9,7 @@ body {
     flex-direction: row;
     justify-content: center;
     width: 100%;
-    height: 100%;
-    min-height: 100vh;
+    background-color: var(--nhs-pale-grey);
 }
 
 .checkin-form {
@@ -202,6 +197,10 @@ body {
 }
 
 @media (max-width: 768px) {
+    .checkin-container {
+        background-color: var(--nhs-white);
+    }
+
     .checkin-form-container {
         width: 100%;
         margin: 0;
