--- a/nhs/src/main/resources/static/css/diary/diary.css
+++ b/nhs/src/main/resources/static/css/diary/diary.css
@@ -55,11 +55,13 @@
     background-color: var(--nhs-pale-grey);
     width: 100%;
     justify-content: center;
-    height: 100%;
-    min-height: 100vh;
 }
 
 @media (max-width: 768px) {
+    .diary-container {
+        background-color: var(--nhs-white);
+    }
+
     .diary-entry-container {
         margin: 0;
         background-color: transparent;
